--- a/views/categories.html.twig
+++ b/views/categories.html.twig
@@ -1,29 +1,29 @@
 <html>
-<head>
-    <title>To Do List</title>
-</head>
-<body>
-    <h1>Categories</h1>
+    <head>
+        <title>To Do List</title>
+    </head>
+    <body>
+        <h1>{{ category.getName }}</h1>
 
-    {% if categories is not empty %}
-        <p>Here are all your categories:</p>
-        <ul>
-            {% for category in categories %}
-                <li>{{ category.getName }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+        {% if tasks is not empty %}
+            <p>Here are the tasks:</p>
+            <ul>
+                {% for task in tasks %}
+                    <li>{{ task.getDescription }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
-    <form action='/categories' method='post'>
-        <label for='name'>Category name</label>
-        <input id='name' name='name' type='text'>
+        <h4>Add a task</h4>
 
-        <button type='submit'>Add category</button>
-    </form>
-    <form action='/delete_categories' method='post'>
-        <button type='submit'>Clear</button>
-    </form>
+        <form action='/tasks' method='post'>
+            <input id="category_id" name="category_id" type="hidden" value="{{ category.getId() }}">
+            <label for='description'>Task Description</label>
+            <input id='description' name='description' type='text'>
 
-    <p><a href='/'>Home</a></p>
-</body>
+            <button type='submit'>Add task</button>
+        </form>
+
+        <p><a href='/'>Home</a></p>
+    </body>
 </html>
