--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -19,8 +19,13 @@
             <ul>
                 {% for category in categories %}
                     <li><a href="/categories/{{ category.getId }}">{{ category.getName }}</a></li>
+                    <form action='/delete_categories' method='post'>
+                    </form>
                 {% endfor %}
             </ul>
+            <form action='/delete_categories' method='post'>
+                <button type='submit'>Delete Categories</button>
+            </form>
         {% else %}
           <p>There are no categories yet!</p>
         {% endif %}
